--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h1 {
     font-family: cursive;
     float: right;
     top: 10px;
-    right: 30px;
+    right: 30px; 
     cursor: pointer;
     color: black;
 }
@@ -36,5 +36,12 @@ h1 {
 }
 
 html {
-    scroll-behavior: smooth;
+    scroll-behavior: smooth
+}
+img{
+    transition: transform .2s;
+    border: 10px solid #AAAAAA;
+}
+img:hover {
+    transform: scale(0.9);
 }
